--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
+    "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "lodash": "^4.17.10",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2"
   }
 }
