--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "antd": "^3.5.2",
     "babel-loader": "^7.1.4",
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.10",
