--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "demo",
+  "sideEffects": false,
   "version": "1.0.0",
-  "description": "- [简介](./docs/1.简介.md)",
+  "description": "Learn-React",
   "main": "index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-loader": "^7.1.4",
+    "babel-preset-react": "^6.24.1",
+    "babel-plugin-import": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
@@ -23,8 +28,6 @@
   },
   "dependencies": {
     "antd": "^3.5.2",
-    "babel-loader": "^7.1.4",
-    "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
