--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "prod": "webpack --config webpack.prod.js && node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "antd": "^3.5.2",
+    "express": "^4.16.3",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
