--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7"
   }
 }
