--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
   },
   "dependencies": {
     "antd": "^3.5.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   }
